app/design/frontend/Magento/luma/Magento_Theme/web/css/source/_module.less
/* ... */
//
//  Navigation
//  _____________________________________________

.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
    .customer-name,
    .customer-welcome + .authorization-link {
        display: none;
    }

    .nav-sections .switcher-trigger strong:after {
        .lib-font-size(16);
        right: -25px;
        top: -2px;
    }

    .navigation .parent .level-top:after {
        .lib-font-size(16);
        right: 10px;
        top: 7px;
    }

    .page-footer .footer.content {
        .switcher-store {
            .lib-css(background, @footer__background-color);
            .lib-font-size(16);
            margin: 0 -@layout__width-xs-indent;

            .switcher-options {
                display: block;

                ul.dropdown {
                    background: none;
                    border: 0;
                    box-shadow: none;
                    margin: 0;
                    position: relative;

                    &:before,
                    &:after {
                        display: none;
                    }
                }

                .switcher-trigger,
                .switcher-option {
                    border-top: 1px solid @footer-links-separator-border-color;
                    display: block;
                    padding: @indent__s @layout-indent__width;
                }

                .switcher-trigger strong {
                    padding: @indent__s 0;
                }

                .switcher-option a {
                    padding: 0;
                }
            }
        }
    }
    .page-footer,
    .copyright {
        bottom: 0;
        position: absolute;
        width: 100%;
    }
}

.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__s) {
    .logo {
        margin-bottom: 13px;
        margin-top: 4px;
    }
}
/* ... */

